; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_notes.c_get_ref.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_notes.c_get_ref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.option = type { i32 }

@git_notes_get_ref_usage = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"too many parameters\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8**, i8*)* @get_ref to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_ref(i32 %0, i8** %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i8*, align 8
  %7 = alloca [1 x %struct.option], align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = getelementptr inbounds [1 x %struct.option], [1 x %struct.option]* %7, i64 0, i64 0
  %9 = call i32 (...) @OPT_END()
  %10 = getelementptr inbounds %struct.option, %struct.option* %8, i32 0, i32 0
  store i32 %9, i32* %10, align 4
  %11 = load i32, i32* %4, align 4
  %12 = load i8**, i8*** %5, align 8
  %13 = load i8*, i8** %6, align 8
  %14 = getelementptr inbounds [1 x %struct.option], [1 x %struct.option]* %7, i64 0, i64 0
  %15 = load i32, i32* @git_notes_get_ref_usage, align 4
  %16 = call i32 @parse_options(i32 %11, i8** %12, i8* %13, %struct.option* %14, i32 %15, i32 0)
  store i32 %16, i32* %4, align 4
  %17 = load i32, i32* %4, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %25

19:                                               ; preds = %3
  %20 = call i32 @_(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  %21 = call i32 @error(i32 %20)
  %22 = load i32, i32* @git_notes_get_ref_usage, align 4
  %23 = getelementptr inbounds [1 x %struct.option], [1 x %struct.option]* %7, i64 0, i64 0
  %24 = call i32 @usage_with_options(i32 %22, %struct.option* %23)
  br label %25

25:                                               ; preds = %19, %3
  %26 = call i32 (...) @default_notes_ref()
  %27 = call i32 @puts(i32 %26)
  ret i32 0
}

declare dso_local i32 @OPT_END(...) #1

declare dso_local i32 @parse_options(i32, i8**, i8*, %struct.option*, i32, i32) #1

declare dso_local i32 @error(i32) #1

declare dso_local i32 @_(i8*) #1

declare dso_local i32 @usage_with_options(i32, %struct.option*) #1

declare dso_local i32 @puts(i32) #1

declare dso_local i32 @default_notes_ref(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
